--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -6,12 +6,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.21",
+    "multiselect-react-dropdown": "^1.6.11",
     "node-sass": "^5.0.0",
     "node-sass-package-importer": "^5.3.2",
     "primeflex": "^2.0.0",
